OverFlow Fixed Footer Changes Images Resized

--- a/css/custom.css
+++ b/css/custom.css
@@ -12,3 +12,13 @@
     margin-bottom: .5em;
     font-size: 1.3em;
   }
+
+  .featureImg {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .site-footer {
+      text-align: center;
+  }
