--- a/css/style.css
+++ b/css/style.css
@@ -1427,3 +1427,20 @@ a {
   cursor: zoom-in; }
   .img-opacity:hover img {
     opacity: .5; }
+
+
+    @media (max-width: 656px) { /*Prevents overflow duw to absolute image positioning under 656px width*/
+      .smcorBP {
+        right: 0;
+        width: 40%;
+      }
+      
+    }
+
+    @media (max-width: 768px) {
+      .featureImg{
+        width: 55%;
+        
+      }
+    
+    }
